src/main/antlr4/com/practica1/.antlr/LanguageParser.java
// Generated from c:/Users/mayit/OneDrive/Documentos/automatas/other/proyecto/grammar1.2/src/main/antlr4/com/practica1/Language.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ALMA_SI=2, ALMA_SINO=3, ALMA_INT=4, ALMA_FLOAT=5, ALMA_BOOLEAN=6, 
		ALMA_STRING=7, ALMA_IMPRIMIR=8, ALMA_PARA=9, ALMA_ASIGNAR=10, ALMA_COMP_IGUAL=11, 
		ALMA_COMP_DIF=12, ALMA_MAYOR_IGUAL=13, ALMA_MENOR_IGUAL=14, ALMA_MENOR=15, 
		ALMA_MAYOR=16, ALMA_SUMA=17, ALMA_REST=18, ALMA_MULT=19, ALMA_DIV=20, 
		ALMA_MOD=21, ALMA_Y=22, ALMA_O=23, ALMA_INC=24, ALMA_DEC=25, ALMA_TERNARIO=26, 
		ALMA_DOSPUNTOS=27, ALMA_ARIT=28, ALMA_FIN=29, ALMA_LPAR=30, ALMA_RPAR=31, 
		ALMA_ACOR=32, ALMA_CCOR=33, ALMA_NUM=34, ALMA_DECIMAL=35, ALMA_TEXTO=36, 
		ALMA_BOOLEANO=37, ALMA_ID=38, ALMA_WS=39, ALMA_COMENTARIO=40;
	public static final int
		RULE_almaPrograma = 0, RULE_almaDeclaracion = 1, RULE_almaTipo = 2, RULE_almaInstruccion = 3, 
		RULE_almaConsola = 4, RULE_almaPara = 5, RULE_almaSi = 6, RULE_almaSino = 7, 
		RULE_almaBloque = 8, RULE_almaCondicion = 9, RULE_almaAsignar = 10, RULE_almaIncremento = 11, 
		RULE_almaIncrementoSimple = 12, RULE_almaAsignacionCompuesta = 13, RULE_almaImprimir = 14, 
		RULE_almaExpresion = 15, RULE_almaTernario = 16, RULE_almaLogico = 17, 
		RULE_almaIgualdad = 18, RULE_almaRelacional = 19, RULE_almaAditivo = 20, 
		RULE_almaMultiplicativo = 21, RULE_almaPrimario = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"almaPrograma", "almaDeclaracion", "almaTipo", "almaInstruccion", "almaConsola", 
			"almaPara", "almaSi", "almaSino", "almaBloque", "almaCondicion", "almaAsignar", 
			"almaIncremento", "almaIncrementoSimple", "almaAsignacionCompuesta", 
			"almaImprimir", "almaExpresion", "almaTernario", "almaLogico", "almaIgualdad", 
			"almaRelacional", "almaAditivo", "almaMultiplicativo", "almaPrimario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'AlmaLilia.consola'", "'AlmaLilia.si'", "'AlmaLilia.sino'", "'AlmaLilia.complete'", 
			"'AlmaLilia.cacho'", "'AlmaLilia.pregunta'", "'AlmaLilia.cadena'", "'AlmaLilia.imprimir'", 
			"'AlmaLilia.para'", "'='", "'=='", "'!='", "'>='", "'<='", "'<'", "'>'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'++'", "'--'", "'?'", 
			"':'", null, "';'", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ALMA_SI", "ALMA_SINO", "ALMA_INT", "ALMA_FLOAT", "ALMA_BOOLEAN", 
			"ALMA_STRING", "ALMA_IMPRIMIR", "ALMA_PARA", "ALMA_ASIGNAR", "ALMA_COMP_IGUAL", 
			"ALMA_COMP_DIF", "ALMA_MAYOR_IGUAL", "ALMA_MENOR_IGUAL", "ALMA_MENOR", 
			"ALMA_MAYOR", "ALMA_SUMA", "ALMA_REST", "ALMA_MULT", "ALMA_DIV", "ALMA_MOD", 
			"ALMA_Y", "ALMA_O", "ALMA_INC", "ALMA_DEC", "ALMA_TERNARIO", "ALMA_DOSPUNTOS", 
			"ALMA_ARIT", "ALMA_FIN", "ALMA_LPAR", "ALMA_RPAR", "ALMA_ACOR", "ALMA_CCOR", 
			"ALMA_NUM", "ALMA_DECIMAL", "ALMA_TEXTO", "ALMA_BOOLEANO", "ALMA_ID", 
			"ALMA_WS", "ALMA_COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Language.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaProgramaContext extends ParserRuleContext {
		public List<AlmaDeclaracionContext> almaDeclaracion() {
			return getRuleContexts(AlmaDeclaracionContext.class);
		}
		public AlmaDeclaracionContext almaDeclaracion(int i) {
			return getRuleContext(AlmaDeclaracionContext.class,i);
		}
		public List<AlmaInstruccionContext> almaInstruccion() {
			return getRuleContexts(AlmaInstruccionContext.class);
		}
		public AlmaInstruccionContext almaInstruccion(int i) {
			return getRuleContext(AlmaInstruccionContext.class,i);
		}
		public AlmaProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaPrograma; }
	}

	public final AlmaProgramaContext almaPrograma() throws RecognitionException {
		AlmaProgramaContext _localctx = new AlmaProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_almaPrograma);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 533649687542L) != 0)) {
				{
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ALMA_INT:
				case ALMA_FLOAT:
				case ALMA_BOOLEAN:
				case ALMA_STRING:
					{
					setState(46);
					almaDeclaracion();
					}
					break;
				case T__0:
				case ALMA_SI:
				case ALMA_IMPRIMIR:
				case ALMA_PARA:
				case ALMA_LPAR:
				case ALMA_NUM:
				case ALMA_DECIMAL:
				case ALMA_TEXTO:
				case ALMA_BOOLEANO:
				case ALMA_ID:
					{
					setState(47);
					almaInstruccion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaDeclaracionContext extends ParserRuleContext {
		public AlmaTipoContext almaTipo() {
			return getRuleContext(AlmaTipoContext.class,0);
		}
		public TerminalNode ALMA_ID() { return getToken(LanguageParser.ALMA_ID, 0); }
		public TerminalNode ALMA_FIN() { return getToken(LanguageParser.ALMA_FIN, 0); }
		public TerminalNode ALMA_ASIGNAR() { return getToken(LanguageParser.ALMA_ASIGNAR, 0); }
		public AlmaExpresionContext almaExpresion() {
			return getRuleContext(AlmaExpresionContext.class,0);
		}
		public AlmaDeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaDeclaracion; }
	}

	public final AlmaDeclaracionContext almaDeclaracion() throws RecognitionException {
		AlmaDeclaracionContext _localctx = new AlmaDeclaracionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_almaDeclaracion);
		int _la;
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				almaTipo();
				setState(54);
				match(ALMA_ID);
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ALMA_ASIGNAR) {
					{
					setState(55);
					match(ALMA_ASIGNAR);
					setState(56);
					almaExpresion(0);
					}
				}

				setState(59);
				match(ALMA_FIN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				almaTipo();
				setState(62);
				match(ALMA_ID);
				setState(63);
				match(ALMA_ASIGNAR);
				setState(64);
				almaExpresion(0);
				setState(65);
				match(ALMA_FIN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaTipoContext extends ParserRuleContext {
		public TerminalNode ALMA_INT() { return getToken(LanguageParser.ALMA_INT, 0); }
		public TerminalNode ALMA_FLOAT() { return getToken(LanguageParser.ALMA_FLOAT, 0); }
		public TerminalNode ALMA_BOOLEAN() { return getToken(LanguageParser.ALMA_BOOLEAN, 0); }
		public TerminalNode ALMA_STRING() { return getToken(LanguageParser.ALMA_STRING, 0); }
		public AlmaTipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaTipo; }
	}

	public final AlmaTipoContext almaTipo() throws RecognitionException {
		AlmaTipoContext _localctx = new AlmaTipoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_almaTipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 240L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaInstruccionContext extends ParserRuleContext {
		public AlmaSiContext almaSi() {
			return getRuleContext(AlmaSiContext.class,0);
		}
		public AlmaParaContext almaPara() {
			return getRuleContext(AlmaParaContext.class,0);
		}
		public AlmaAsignarContext almaAsignar() {
			return getRuleContext(AlmaAsignarContext.class,0);
		}
		public TerminalNode ALMA_FIN() { return getToken(LanguageParser.ALMA_FIN, 0); }
		public AlmaExpresionContext almaExpresion() {
			return getRuleContext(AlmaExpresionContext.class,0);
		}
		public AlmaIncrementoContext almaIncremento() {
			return getRuleContext(AlmaIncrementoContext.class,0);
		}
		public AlmaImprimirContext almaImprimir() {
			return getRuleContext(AlmaImprimirContext.class,0);
		}
		public AlmaConsolaContext almaConsola() {
			return getRuleContext(AlmaConsolaContext.class,0);
		}
		public AlmaInstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaInstruccion; }
	}

	public final AlmaInstruccionContext almaInstruccion() throws RecognitionException {
		AlmaInstruccionContext _localctx = new AlmaInstruccionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_almaInstruccion);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				almaSi();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				almaPara();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				almaAsignar();
				setState(74);
				match(ALMA_FIN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				almaExpresion(0);
				setState(77);
				match(ALMA_FIN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				almaIncremento();
				setState(80);
				match(ALMA_FIN);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				almaImprimir();
				setState(83);
				match(ALMA_FIN);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(85);
				almaConsola();
				setState(86);
				match(ALMA_FIN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaConsolaContext extends ParserRuleContext {
		public TerminalNode ALMA_LPAR() { return getToken(LanguageParser.ALMA_LPAR, 0); }
		public AlmaExpresionContext almaExpresion() {
			return getRuleContext(AlmaExpresionContext.class,0);
		}
		public TerminalNode ALMA_RPAR() { return getToken(LanguageParser.ALMA_RPAR, 0); }
		public AlmaConsolaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaConsola; }
	}

	public final AlmaConsolaContext almaConsola() throws RecognitionException {
		AlmaConsolaContext _localctx = new AlmaConsolaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_almaConsola);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__0);
			setState(91);
			match(ALMA_LPAR);
			setState(92);
			almaExpresion(0);
			setState(93);
			match(ALMA_RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaParaContext extends ParserRuleContext {
		public TerminalNode ALMA_PARA() { return getToken(LanguageParser.ALMA_PARA, 0); }
		public TerminalNode ALMA_LPAR() { return getToken(LanguageParser.ALMA_LPAR, 0); }
		public List<TerminalNode> ALMA_FIN() { return getTokens(LanguageParser.ALMA_FIN); }
		public TerminalNode ALMA_FIN(int i) {
			return getToken(LanguageParser.ALMA_FIN, i);
		}
		public TerminalNode ALMA_RPAR() { return getToken(LanguageParser.ALMA_RPAR, 0); }
		public AlmaBloqueContext almaBloque() {
			return getRuleContext(AlmaBloqueContext.class,0);
		}
		public AlmaDeclaracionContext almaDeclaracion() {
			return getRuleContext(AlmaDeclaracionContext.class,0);
		}
		public List<AlmaAsignarContext> almaAsignar() {
			return getRuleContexts(AlmaAsignarContext.class);
		}
		public AlmaAsignarContext almaAsignar(int i) {
			return getRuleContext(AlmaAsignarContext.class,i);
		}
		public AlmaCondicionContext almaCondicion() {
			return getRuleContext(AlmaCondicionContext.class,0);
		}
		public AlmaIncrementoContext almaIncremento() {
			return getRuleContext(AlmaIncrementoContext.class,0);
		}
		public AlmaParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaPara; }
	}

	public final AlmaParaContext almaPara() throws RecognitionException {
		AlmaParaContext _localctx = new AlmaParaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_almaPara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(ALMA_PARA);
			setState(96);
			match(ALMA_LPAR);
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALMA_INT:
			case ALMA_FLOAT:
			case ALMA_BOOLEAN:
			case ALMA_STRING:
				{
				setState(97);
				almaDeclaracion();
				}
				break;
			case ALMA_ID:
				{
				setState(98);
				almaAsignar();
				}
				break;
			case ALMA_FIN:
				break;
			default:
				break;
			}
			setState(101);
			match(ALMA_FIN);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 533649686528L) != 0)) {
				{
				setState(102);
				almaCondicion();
				}
			}

			setState(105);
			match(ALMA_FIN);
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(106);
				almaAsignar();
				}
				break;
			case 2:
				{
				setState(107);
				almaIncremento();
				}
				break;
			}
			setState(110);
			match(ALMA_RPAR);
			setState(111);
			almaBloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaSiContext extends ParserRuleContext {
		public List<TerminalNode> ALMA_SI() { return getTokens(LanguageParser.ALMA_SI); }
		public TerminalNode ALMA_SI(int i) {
			return getToken(LanguageParser.ALMA_SI, i);
		}
		public List<TerminalNode> ALMA_LPAR() { return getTokens(LanguageParser.ALMA_LPAR); }
		public TerminalNode ALMA_LPAR(int i) {
			return getToken(LanguageParser.ALMA_LPAR, i);
		}
		public List<AlmaCondicionContext> almaCondicion() {
			return getRuleContexts(AlmaCondicionContext.class);
		}
		public AlmaCondicionContext almaCondicion(int i) {
			return getRuleContext(AlmaCondicionContext.class,i);
		}
		public List<TerminalNode> ALMA_RPAR() { return getTokens(LanguageParser.ALMA_RPAR); }
		public TerminalNode ALMA_RPAR(int i) {
			return getToken(LanguageParser.ALMA_RPAR, i);
		}
		public List<AlmaBloqueContext> almaBloque() {
			return getRuleContexts(AlmaBloqueContext.class);
		}
		public AlmaBloqueContext almaBloque(int i) {
			return getRuleContext(AlmaBloqueContext.class,i);
		}
		public List<TerminalNode> ALMA_SINO() { return getTokens(LanguageParser.ALMA_SINO); }
		public TerminalNode ALMA_SINO(int i) {
			return getToken(LanguageParser.ALMA_SINO, i);
		}
		public AlmaSinoContext almaSino() {
			return getRuleContext(AlmaSinoContext.class,0);
		}
		public AlmaSiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaSi; }
	}

	public final AlmaSiContext almaSi() throws RecognitionException {
		AlmaSiContext _localctx = new AlmaSiContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_almaSi);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(ALMA_SI);
			setState(114);
			match(ALMA_LPAR);
			setState(115);
			almaCondicion();
			setState(116);
			match(ALMA_RPAR);
			setState(117);
			almaBloque();
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(118);
					match(ALMA_SINO);
					setState(119);
					match(ALMA_SI);
					setState(120);
					match(ALMA_LPAR);
					setState(121);
					almaCondicion();
					setState(122);
					match(ALMA_RPAR);
					setState(123);
					almaBloque();
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALMA_SINO) {
				{
				setState(130);
				almaSino();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaSinoContext extends ParserRuleContext {
		public TerminalNode ALMA_SINO() { return getToken(LanguageParser.ALMA_SINO, 0); }
		public AlmaBloqueContext almaBloque() {
			return getRuleContext(AlmaBloqueContext.class,0);
		}
		public AlmaSinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaSino; }
	}

	public final AlmaSinoContext almaSino() throws RecognitionException {
		AlmaSinoContext _localctx = new AlmaSinoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_almaSino);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ALMA_SINO);
			setState(134);
			almaBloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaBloqueContext extends ParserRuleContext {
		public TerminalNode ALMA_ACOR() { return getToken(LanguageParser.ALMA_ACOR, 0); }
		public TerminalNode ALMA_CCOR() { return getToken(LanguageParser.ALMA_CCOR, 0); }
		public List<AlmaInstruccionContext> almaInstruccion() {
			return getRuleContexts(AlmaInstruccionContext.class);
		}
		public AlmaInstruccionContext almaInstruccion(int i) {
			return getRuleContext(AlmaInstruccionContext.class,i);
		}
		public AlmaBloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaBloque; }
	}

	public final AlmaBloqueContext almaBloque() throws RecognitionException {
		AlmaBloqueContext _localctx = new AlmaBloqueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_almaBloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(ALMA_ACOR);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 533649687302L) != 0)) {
				{
				{
				setState(137);
				almaInstruccion();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(ALMA_CCOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaCondicionContext extends ParserRuleContext {
		public AlmaExpresionContext almaExpresion() {
			return getRuleContext(AlmaExpresionContext.class,0);
		}
		public AlmaCondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaCondicion; }
	}

	public final AlmaCondicionContext almaCondicion() throws RecognitionException {
		AlmaCondicionContext _localctx = new AlmaCondicionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_almaCondicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			almaExpresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaAsignarContext extends ParserRuleContext {
		public TerminalNode ALMA_ID() { return getToken(LanguageParser.ALMA_ID, 0); }
		public TerminalNode ALMA_ASIGNAR() { return getToken(LanguageParser.ALMA_ASIGNAR, 0); }
		public AlmaExpresionContext almaExpresion() {
			return getRuleContext(AlmaExpresionContext.class,0);
		}
		public AlmaAsignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaAsignar; }
	}

	public final AlmaAsignarContext almaAsignar() throws RecognitionException {
		AlmaAsignarContext _localctx = new AlmaAsignarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_almaAsignar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(ALMA_ID);
			setState(148);
			match(ALMA_ASIGNAR);
			setState(149);
			almaExpresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlmaIncrementoContext extends ParserRuleContext {
		public AlmaIncrementoSimpleContext almaIncrementoSimple() {
			return getRuleContext(AlmaIncrementoSimpleContext.class,0);
		}
		public AlmaAsignacionCompuestaContext almaAsignacionCompuesta() {
			return getRuleContext(AlmaAsignacionCompuestaContext.class,0);
		}
		public AlmaIncrementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_almaIncremento; }
	}
